--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -648,6 +648,7 @@ body {
                     height: 100%;
                     .products-content-text-list-item, .products-content-text-list-item-active{ 
                         margin-bottom: 10px;
+                        cursor: pointer;
                         &:last-child{
                             margin-bottom: 0px;
                         }
