--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -673,18 +673,12 @@ body {
                             }
                         }
                         .products-content-text-list-item-info {
-                           height: 168px;
-                           @media(max-width: 1436px){
-                            height: 153px;
-                            }
-                            @media(max-width: 1200px){
-                                height: 113px;
-                            }
+                            height: 0;
+                            opacity: 0;
                             border:  1px solid #e5e5e5;
                             border-top: none;
-                            display: none;
                             overflow: hidden;
-                             padding: 21px 10px 28px 20px;
+                            transition: all 1s;
                             .products-content-text-list-item-info-parag {
                                
                                 .text(15px,italic,left,#999999,'Roboto - Light Italic',normal,none); 
@@ -694,12 +688,22 @@ body {
                     }
                     .active {
                         .products-content-text-list-item-info{
-                            display: flex;
-                            align-items: center;       
+                            height: 168px;
+                            @media(max-width: 1436px){
+                             height: 153px;
+                             }
+                             @media(max-width: 1200px){
+                                 height: 113px;
+                             }
+                            align-items: center;
+                            padding: 21px 10px 28px 20px; 
+                            opacity: 1; 
+
                         }
                         .products-content-text-list-item-header{
                             .products-content-text-list-item-header-left-arrow{
                                 transform: rotate(-90deg);
+                                transition: all 0.8s;
                             }
                         }                        
                     }
